--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>my website amin</h1>
     <h3>im from banglades in dhaka city</h3>
+    <p>hello how are you ok sir </p>
+    <p>are you ok sir i am ok sir best lock sir </p>
+    <p>oky good morning sir </p>
 </body>
 </html>
